<resources>
    <string name="app_name">Enterprise messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Servers</string>
    <string name="menu_add_server">Add Server</string>
    <string name="menu_settings">Settings</string>

    <string name="dialog_add_server_title">Add New Server</string>
    <string name="hint_server_name">Server Name (optional)</string>
    <string name="hint_server_ip">IP Address / Hostname (e.g. 10.0.2.2:8080)</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <string name="dialog_edit_server_title">Edit Server</string>
    <string name="dialog_delete_server_title">Delete Server</string>
    <string name="dialog_delete_server_message">Are you sure you want to delete \"%1$s\"?</string>

    <string name="hint_type_message">Type a message&#8230;</string>
    <string name="desc_send_message">Send message</string>
    <string name="error_server_unreachable">Server cannot be reached</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>
