<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="cz.mkdaniel.enterprisemessenger.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <dialog
        android:id="@+id/nav_add_server"
        android:name="cz.mkdaniel.enterprisemessenger.ui.server.AddServerDialogFragment"
        android:label="@string/menu_add_server" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="cz.mkdaniel.enterprisemessenger.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_rooms"
        android:name="cz.mkdaniel.enterprisemessenger.ui.transform.RoomsFragment"
        android:label="{serverName}"
        tools:layout="@layout/fragment_rooms">
        <argument
            android:name="serverIndex"
            app:argType="integer" />
        <argument
            android:name="serverName"
            app:argType="string" />
        <argument
            android:name="serverIp"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/nav_messages"
        android:name="cz.mkdaniel.enterprisemessenger.ui.message.MessagesFragment"
        android:label="{roomName}"
        tools:layout="@layout/fragment_messages">
        <argument
            android:name="serverIndex"
            app:argType="integer" />
        <argument
            android:name="roomId"
            app:argType="string" />
        <argument
            android:name="roomName"
            app:argType="string" />
        <argument
            android:name="serverIp"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="encryptionKey"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
</navigation>
